do), the close() call does not result in all data being flushed to the
device.  We have determined that the data is in fact written by the
"epson" process, but it's never getting to the printer.

================================================================

III) MAJOR CHANGES FROM PREVIOUS RELEASES

* Changes from 5.2.5

   1) New printers supported in this release:

      Canon PIXMA MP970
      EPSON Artisan 50
      EPSON EP-302
      EPSON EP-702A
      EPSON Stylus Photo P50
      EPSON Stylus Pro 4800
      EPSON Stylus Pro 4880
      EPSON Stylus Pro 11800
      EPSON Stylus T59
      EPSON Stylus T60
      EPSON Stylus TX659

   2) Fix printing to Epson Stylus S20, S21, T20, and T21.

   3) Correct printer definitions of EPSON Stylus Pro 7800 and 9800
      (to use Ultrachrome K3 rather than Ultrachrome inks and media
      definitions).

   4) Adjusted the printer definitions of the Epson Stylus Pro 7880,
      9880, and 11880 to be consistent with new definition of 4880.

   5) Correct printer definition of Canon ImageRunner 330s (large
      format).

   6) Add CD Allow Other Media Sizes option to Epson printers to
      permit printing to other media sizes when using third party
      trays.

   7) Correct the behavior of scan and page dry times for Epson Stylus
      Pro printers.

   8) The Enhanced Print plugin for GIMP now allows printing very
      small images at their correct sizes.

   9) A Finnish translation has been added.
   

* Changes from 5.2.4

   1) New printers supported in this release:

      EPSON Artisan 710
      EPSON Artisan 810
      EPSON Stylus NX115
      EPSON Stylus NX215
      EPSON Stylus NX415
      EPSON Stylus NX515
      EPSON Stylus Photo 1290s
      EPSON PX 1001
      EPSON Stylus Office B1100
      EPSON Stylus Office T1100
      EPSON Stylus Office T1110
      EPSON ME Office 1100
      EPSON WorkForce 310
      EPSON WorkForce 315
      EPSON WorkForce 610
      EPSON WorkForce 615