@@ -119,6 +119,9 @@
 #gptofoo bjc-MULTIPASS-MP170 printer/Canon-MULTIPASS-MP170
 #gptofoo bjc-MULTIPASS-MP180 printer/Canon-MULTIPASS-MP180
 #gptofoo bjc-MULTIPASS-MP220 printer/Canon-MULTIPASS-MP220
+#gptofoo bjc-MULTIPASS-MP360 printer/Canon-MULTIPASS-MP360
+#gptofoo bjc-MULTIPASS-MP370 printer/Canon-MULTIPASS-MP370
+#gptofoo bjc-MULTIPASS-MP390 printer/Canon-MULTIPASS-MP390
 #gptofoo bjc-MULTIPASS-MP500 printer/Canon-MULTIPASS-MP500
 #gptofoo bjc-MULTIPASS-MP520 printer/Canon-MULTIPASS-MP520
 #gptofoo bjc-MULTIPASS-MP610 printer/Canon-MULTIPASS-MP610
