@@ -254,6 +254,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
    1) New printers supported in this release:
 
+      Canon PIXMA MP360
+      Canon PIXMA MP370
+      Canon PIXMA MP380
       Canon PIXMA MP970
       EPSON Artisan 50
       EPSON EP-302
